--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.1",
@@ -59,6 +60,7 @@
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
     "react-i18next": "^11.15.5",
+    "react-modal": "^3.16.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1"
   }
