--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,9 @@
     "browser": true,
     "node": true,
     "mocha": true,
-    "es6": true
+    "es6": true,
+    "es2021": true,
+    "jest": true
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -42,6 +44,12 @@
     "@typescript-eslint/no-use-before-define": 0,
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/interactive-supports-focus": 0,
+    "max-len": [
+      "error",
+      {
+        "ignoreComments": true
+      }
+    ],
     "no-console": [
       2,
       {
