--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook",
-    "generate:slice": "node ./scripts/createSlice/index.js"
+    "generate:slice": "node ./scripts/createSlice/index.js",
+    "unit": "jest --config ./config/jest/jest.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -29,8 +30,9 @@
     "npm": "8.5.1"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@svgr/webpack": "^6.2.1",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -39,6 +41,7 @@
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^4.7.2",
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.6.0",
     "concurrently": "^7.6.0",
@@ -51,6 +54,7 @@
     "css-loader": "^6.6.0",
     "file-loader": "^6.2.0",
     "babel-loader": "^8.2.3",
+    "babel-plugin-i18next-extract": "^0.8.3",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
@@ -60,6 +64,8 @@
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@svgr/webpack": "^6.2.1",
     "vite": "^3.1.0",
     "vite-plugin-svgr": "^2.2.1",
     "@vitejs/plugin-react": "^2.1.0",
@@ -76,7 +82,8 @@
     "eslint-plugin-storybook": "^0.5.8",
     "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "jest": "^27.5.1"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
